# k8s-sandbox

./: .editorconfig  .yamllint.yaml  Makefile  README.md  docker-compose.registry.yaml  docker-compose.yaml
clients/cli/: go.mod  main.go
k8s/: fastapi-example-deployment.yaml  fastapi-example-ingress.yaml  fastify-example-deployment.yaml  fastify-example-ingress.yaml  flask-example-service.yaml  gin-example-deployment.yaml  gin-example-ingress.yaml  gin-example-service.yaml  gohttp-example-ingress.yaml  gohttp-example-service.yaml  nginx-example-deployment.yaml  nginx-example-ingress.yaml
k8s/configs/: mongodb-example-configmap.yaml  mongodb-sharded-cluster-configmap.yaml  mongodb-sharded-cluster-keyfile-secret.yaml  mongodb-sharded-cluster-secret.yaml  mongodb-single-configmap.yaml  mongodb-single-secret.yaml
k8s/db/: mongo-express-deployment.yaml  mongo-express-ingress.yaml  mongo-express-service.yaml  mongodb-example-deployment.yaml  mongodb-example-secret.yaml  mongodb-example-service.yaml
k8s/services/: django-example-deployment.yaml  django-example-ingress.yaml  django-example-service.yaml  express-example-deployment.yaml  express-example-ingress.yaml  express-example-service.yaml  fastapi-example-service.yaml  fastify-example-service.yaml  flask-example-deployment.yaml  flask-example-ingress.yaml  gohttp-example-deployment.yaml  nginx-example-service.yaml  (+3 more)
scripts/: push-images.sh  push-packages.sh  update_domains.py
tests/private/: Dockerfile  mypy.ini  pyproject.toml
tests/private/src/: app.py  config.py
tests/private/src/routers/: mongodb_tester.py
(+59 files in other folders)
